# computer-graphics

./: .gitignore  .gitmodules  CMakeLists.txt
assignment_1/: callback.cpp  main.cpp  renderer.cpp  scene.cpp
assignment_1/shader/: fragment-shader.glsl
assignment_1/shaders/: fragment-shader.glsl  vertex-shader.glsl
assignment_2/: main.cpp  renderer.cpp  scene.cpp
assignment_2/resources/objects/sample/: spacing.txt    tf.txt
assignment_2/resources/objects/volume/: size.txt  tf.raw
assignment_2/shaders/: fragment-shader.glsl  vertex-shader.glsl
assignment_2_transfer_function_gen/: main.cpp
include/: base-object.h  callback-inc.h  callback.h  camera.h  cast.h  control-inc.h  control.h  cube.h  drawable.h  endian-type.h  error.h  event-inc.h  event.h  frame-buffer-inc.h  frame-buffer.h  gl-object.h  initializer.h  light.h  material.h  mesh.h  model.h  mouse.h  program-inc.h  program.h  read-raw-inc.h  read-raw.h  read-voxels-inc.h  read-voxels.h  renderer.h  scene.h  shader-inc.h  shader.h  texture1d-inc.h  texture1d.h  texture2d-inc.h  texture2d.h  texture3d-inc.h  texture3d.h  transfer-function-gen-inc.h  transfer-function-gen.h  (+14 more)
scripts/: build.sh
shaders/: backface.frag.glsl  backface.vert.glsl  raycasting.frag-dump.glsl  raycasting.frag.glsl  raycasting.vert.glsl
src/: base-object.cpp  callback.cpp  camera.cpp  cube.cpp  endian-type.cpp  error.cpp  frame-buffer.cpp  gl-object.cpp  initializer.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  mouse.cpp  program.cpp  read-voxels.cpp  renderer.cpp  scene.cpp  texture2d.cpp  transfer-function.cpp  volume-surface.cpp  window.cpp  world.cpp
